--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -25,3 +25,9 @@ body {
     height: 178px;
     display: block;
   }
+  .article-container .ql-toolbar.ql-snow{
+    padding: 0 8px;
+  }
+  .article-container .ql-editor{
+    height: 300px;
+  }
